--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@mdx-js/react": "^2.1.2",
     "gatsby": "^4.23.1",
     "gatsby-plugin-image": "^2.24.0",
+    "gatsby-plugin-mdx": "^4.0.0",
     "gatsby-plugin-sharp": "^4.24.0",
     "gatsby-source-filesystem": "^4.24.0",
+    "gatsby-transformer-remark": "^5.24.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
   }
